--- a/Complete Responsive Food  Restaurant/css/style.css
+++ b/Complete Responsive Food  Restaurant/css/style.css
@@ -29,6 +29,52 @@ html {
 
 }
 
+
+section {
+    padding: 2rem 9%;
+
+}
+
+section:nth-child(even) {
+    background-color: #eee;
+}
+
+.sub-heading {
+    text-align: center;
+    color: var(--green);
+    font-size: 2rem;
+    padding-top: 1rem;
+    
+
+}
+
+.heading {
+    text-align: center;
+    color: var(--black);
+    font-size: 3rem;
+    padding-bottom: 2rem;
+    text-transform: uppercase;
+}
+
+.btn {
+    margin-top: 1rem;
+    display: inline-block;
+    font-size: 1.7rem;
+    color: #fff;
+    background: var(--black);
+    border-radius: .5rem;
+    cursor: pointer;
+    padding: .8rem 3rem;
+
+}
+
+.btn:hover {
+   background-color: var(--green);
+   letter-spacing: .1rem; 
+
+}
+
+
 header {
     position: fixed;
     top: 0; left: 0; right: 0;
@@ -64,7 +110,7 @@ header .navbar a {
 
 header .navbar a.active,
 header .navbar a:hover {
-    columns: #fff;
+    color: #fff;
     background: var(--green);
 
 }
@@ -92,7 +138,207 @@ header .icons a:hover {
 }
 
 header .icons #menu-bars {
-    display: none;
+    display: none; 
+
+}
+
+
+#search-form {
+    position: fixed;
+    top: -110%; left: 0;
+    height: 100%; width: 100%;
+    z-index: 1004;
+    background: rgba(0, 0, 0, .8);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 1rem;
+
+}
+
+#search-form.active {
+    top: 0;
+}
+
+#search-form #search-box {
+    width: 50rem;
+    border-bottom: .1rem solid #fff;
+    padding: 1rem 0;
+    color: #fff;
+    font-size: 3rem;
+    text-transform: none;
+    background: none;
+
+}
+
+#search-form #search-box::placeholder {
+    color: #eee;
+
+}
+
+#search-form #search-box::-webkit-search-cancel-button {
+    -webkit-appearance: none;
+    
+}
+
+#search-form label {
+    color: #fff;
+    cursor: pointer;
+    font-size: 3rem;
+
+}
+
+#search-form label:hover {
+    color: var(--green);
+
+}
+
+#search-form #close {
+    position: absolute;
+    color: #fff;
+    cursor: pointer;
+    top: 2rem; right: 3rem;
+    font-size: 5rem;
+
+}
+
+
+.home .home-slider .slide {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 2rem;
+    padding-top: 9rem;
+
+}
+
+.home .home-slider .slide .content {
+    flex: 1 1 45rem;
+
+}
+
+.home .home-slider .slide .image {
+    flex: 1 1 45rem;
+    
+}
+
+.home .home-slider .slide .image img {
+    width: 100%;
+}
+
+.home .home-slider .slide .content span {
+    color: var(--green);
+    font-size: 2.5rem;
+
+}
+
+.home .home-slider .slide .content h3 {
+    color: var(--black);
+    font-size: 7rem;
+
+}
+
+.home .home-slider .slide .content p {
+    color: var(--light-color);
+    font-size: 2.2rem;
+    padding: .5rem 0;
+    line-height: 1.5rem;
+
+}
+
+.swiper-pagination-bullet-active {
+    background: var(--green);
+
+}
+
+.dishes .box-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(28rem,1fr));
+    gap: 1.5rem;
+}
+
+.dishes .box-container .box {
+    padding: 2.5rem;
+    background: #fff;
+    border-radius: .5rem;
+    border: .1rem solid rgba(0, 0, 0, .2);
+    box-shadow: var(--box-shadow);
+    position: relative;
+    overflow: hidden;
+    text-align: center;
+
+}
+
+.dishes .box-container .box .fa-heart,
+.dishes .box-container .box .fa-eye {
+    position: absolute;
+    top: 1.5rem;
+    background: #eee;
+    border-radius: 5rem;
+    width: 5rem;
+    line-height: 5rem;
+    font-size: 2rem;
+    color: var(--black);
+
+}
+
+.dishes .box-container .box .fa-heart:hover,
+.dishes .box-container .box .fa-eye:hover {
+    background: var(--green);
+    color: #fff;
+
+}
+
+
+.dishes .box-container .box .fa-heart {
+    right: -15rem;
+
+}
+
+.dishes .box-container .box .fa-eye {
+    left: -15rem;
+    
+}
+
+.dishes .box-container .box:hover .fa-heart {
+    right: 1.5rem;
+
+}
+
+.dishes .box-container .box:hover .fa-eye {
+    left: 1.5rem;
+    
+}
+
+.dishes .box-container .box img {
+    height: 17rem;
+    margin: 1rem 0;
+
+}
+
+.dishes .box-container .box h3 {
+    color: var(--black);
+    font-size: 2.5rem;
+
+}
+
+.dishes .box-container .box .stars {
+    padding: 1rem 0;
+
+}
+
+.dishes .box-container .box .stars i {
+    font-size: 1.7rem;
+    color: var(--green);
+    
+}
+
+
+.dishes .box-container .box span {
+    color: var(--green);
+    font-weight: bolder;
+    margin-right: 1rem;
+    font-size: 2.5rem;
 
 }
 
@@ -102,14 +348,7 @@ header .icons #menu-bars {
 
 
 
-
-
-
-
-
-
-
-/* media queries */
+/* ============== media queries ============= */
 
 @media (max-width:991px) {
     
@@ -118,8 +357,12 @@ header .icons #menu-bars {
     
     }
 
-    header{
+    header {
         padding: 1rem 2rem;
+    }
+
+    section {
+        padding: 2rem;
     }
    
 }
@@ -136,8 +379,56 @@ header .icons #menu-bars {
         top: 100%; left: 0; right: 0;
         background: #fff;
         border-top: .1rem solid rgba(0,0,0,.2);
+        border-bottom: .1rem solid rgba(0,0,0,.2);
         padding: 1rem;
-        ;
+        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+        
     }
 
+    header .navbar.active {
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+    }
+
+    header .navbar a {
+        display: block;
+        padding: 1.5rem;
+        margin: 1rem;
+        font-size: 2rem;
+        background: #eee;      
+
+    }
+
+    #search-form #search-box {
+        width: 90%;
+        margin: 0 1rem;
+
+    }
+
+    .home .home-slider .slide .content h3 {
+  
+        font-size: 5rem;
+    
+    }
+    
+
+
 }
+
+@media (max-width:991px) {
+    
+    html {
+        font-size: 50%;
+    
+    }
+
+    .dishes .box-container .box img {
+        height: auto;
+        width: 100%;
+    
+    }
+   
+}
+
+
+
+
