--- a/Complete Responsive Food  Restaurant/css/style.css
+++ b/Complete Responsive Food  Restaurant/css/style.css
@@ -1,11 +1,10 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&family=Poppins:wght@300;400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap');
 
 
 :root {
     --green: #27ae60;
     --black: #192a56;
-    --lighting-color: #666;
+    --light-color: #666;
     --box-shadow: 0 .5rem 1.5rem rgba(0,0,0,.1);
 
 }
@@ -36,7 +35,7 @@ section {
 }
 
 section:nth-child(even) {
-    background-color: #eee;
+    background: #eee;
 }
 
 .sub-heading {
@@ -45,7 +44,6 @@ section:nth-child(even) {
     font-size: 2rem;
     padding-top: 1rem;
     
-
 }
 
 .heading {
@@ -69,7 +67,7 @@ section:nth-child(even) {
 }
 
 .btn:hover {
-   background-color: var(--green);
+   background: var(--green);
    letter-spacing: .1rem; 
 
 }
@@ -78,7 +76,7 @@ section:nth-child(even) {
 header {
     position: fixed;
     top: 0; left: 0; right: 0;
-    background-color: #fff;
+    background: #fff;
     padding: 1rem 7%;
     display: flex;
     align-items: center;
@@ -104,7 +102,7 @@ header .navbar a {
     font-size: 1.7rem;
     border-radius: .5rem;
     padding: .5rem 1.5rem;
-    color: var(--lighting-color);
+    color: var(--light-color);
 
 }
 
@@ -124,7 +122,7 @@ header .icons a {
     width: 4.5rem;
     text-align: center;
     font-size: 1.7rem;
-    columns: var(--black);
+    color: var(--black);
     border-radius: 50%;
     background:#eee;
 
@@ -242,7 +240,7 @@ header .icons #menu-bars {
     color: var(--light-color);
     font-size: 2.2rem;
     padding: .5rem 0;
-    line-height: 1.5rem;
+    line-height: 1.5;
 
 }
 
@@ -253,7 +251,7 @@ header .icons #menu-bars {
 
 .dishes .box-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(28rem,1fr));
+    grid-template-columns: repeat(auto-fit, minmax(28rem, 1fr));
     gap: 1.5rem;
 }
 
@@ -274,7 +272,8 @@ header .icons #menu-bars {
     position: absolute;
     top: 1.5rem;
     background: #eee;
-    border-radius: 5rem;
+    border-radius: 50%;
+    height: 5rem;
     width: 5rem;
     line-height: 5rem;
     font-size: 2rem;
@@ -507,6 +506,188 @@ header .icons #menu-bars {
 }
 
 
+.review .slide {
+    padding: 2rem;
+    box-shadow: var(--box-shadow);
+    border: .1rem solid rgba(0, 0, 0, .2);
+    border-radius: .5rem;
+    position: relative;
+
+}
+
+.review .slide .fa-quote-right {
+    position: absolute;
+    top: 2rem; right: 2rem;
+    font-size: 6rem;
+    color: #ccc;
+}
+
+.review .slide .user {
+    display: flex;
+    gap: 1.5rem;
+    align-items: center;
+    padding-bottom: 1.5rem;
+
+}
+
+.review .slide .user img {
+    height: 7rem;
+    width: 7rem;
+    border-radius: 50%;
+    object-fit: cover;
+
+}
+
+.review .slide .user h3 {
+    color: var(--black);
+    font-size: 2rem;
+    padding-bottom: .5rem;
+
+}
+
+.review .slide .user i {
+    font-size: 1.3rem;
+    color: var(--green);
+
+}
+
+.review .slide p {
+    font-size: 1.5rem;
+    line-height: 1.8;
+    color: var(--light-color);
+
+}
+
+
+
+.order form {
+    max-width: 90rem;
+    border-radius: .5rem;
+    box-shadow: var(--box-shadow);
+    border: .1rem solid rgba(0, 0, 0, .2);
+    background: #fff;
+    padding: 1.5rem;
+    margin: 0 auto;
+
+}
+
+.order form .inputBox {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+}
+
+
+.order form .inputBox .input {
+    width: 49%;
+
+}
+
+.order form .inputBox .input span {
+    display: block;
+    padding: .5rem 0;
+    font-size: 1.5rem;
+    color: var(--light-color);
+
+}
+
+.order form .inputBox .input input,
+.order form .inputBox .input textarea {
+    background: #eee;
+    border-radius: .5rem;
+    padding: 1rem;
+    font-size: 1.6rem;
+    color: var(--black);
+    text-transform: none;
+    margin-bottom: 1rem;
+    width: 100%;
+
+}
+
+.order form .inputBox .input input:focus,
+.order form .inputBox .input textarea:focus {
+    border: .1rem solid var(--green);
+}
+
+
+.order form .inputBox .input textarea {
+    height: 20rem;
+    resize: none;
+}
+
+.order form .btn {
+    margin-top: 0;
+}
+
+
+
+.footer .box-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+    gap: 1.5rem;
+
+}
+
+.footer .box-container .box h3 {
+    padding: .5rem 0;
+    font-size: 2.5rem;
+    color: var(--black);
+}
+
+.footer .box-container .box a {
+    display: block;
+    padding: .5rem 0;
+    font-size: 1.5rem;
+    color: var(--light-color);
+
+}
+
+.footer .box-container .box a:hover {
+    color: var(--green);
+    text-decoration: underline;
+}
+
+.footer .credit {
+    text-align: center;
+    border-top: .1rem solid rgba(0, 0, 0, .1);
+    font-size: 2rem;
+    color: var(--black);
+    padding: .5rem;
+    padding-top: 1.5rem;
+    margin-top: 1.5rem;
+
+}
+
+.footer .credit span {
+    color: var(--green);
+}
+
+
+.loader-container {
+    position: fixed;
+    top: 0; left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 10000;
+    background: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+
+}
+
+
+.loader-container img {
+    width: 35rem;
+}
+
+
+.loader-container.fade-out {
+    top: -110%;
+    opacity: 0;
+}
 
 
 
@@ -518,7 +699,6 @@ header .icons #menu-bars {
     
     html {
         font-size: 55%;
-    
     }
 
     header {
@@ -535,7 +715,6 @@ header .icons #menu-bars {
 
     header .icons #menu-bars {
         display: inline-block;
-    
     }
 
     header .navbar {
@@ -569,17 +748,13 @@ header .icons #menu-bars {
     }
 
     .home .home-slider .slide .content h3 {
-  
         font-size: 5rem;
     
-
     }
 
 }
 
-
-
-@media (max-width:991px) {
+@media (max-width:450px) {
     
     html {
         font-size: 50%;
@@ -590,6 +765,11 @@ header .icons #menu-bars {
         height: auto;
         width: 100%;
     
+    }
+
+    .order form .inputBox .input {
+        width: 100%;
+
     }
    
 }
